trunk/public_html/templates/basic/css/basic.css
/* ... */
	voice-family:inherit;
	width:128px;
	}
body>#nav_block {width:128px;}

.nav
{
	font-size:0.8em;
}

.nav ul
{
	margin:0;
	padding:0 0 0 1em;
}

.nav h3.newstitle
{
	font-weight:bold;
	margin: 0.8em 0 0 0;
}

.nav .newsbody
{
	font-size:0.8em;
}

.nav .newsfooter
{
	font-size:0.7em;
	color:silver;
}

/*---------------------------------------------------------------*
 * main content block
 *---------------------------------------------------------------*/

.content_photoblack
{
	background:black;
	position:relative;
	width:auto;
	min-width:120px;
	margin:4px 10px 0px 170px;
	
	border:2px solid black;
	z-index:3;
	color:silver;
}

.content_photoblack h2
{
	color:white;
	padding-left:10px;
	padding-top:10px;
	margin-bottom:0;
}

.content_photoblack h3
{
	margin-top:0;
	padding-left:10px;
	font-weight:normal;
	color:silver;
}

.content_photoblack .interestBox {
	background-color:#333333;
	color:#bbbbbb;
}

.content_photoblack .interestBox a {
	color:white;
}


.content_photogray
{
	background:gray;
	position:relative;
	width:auto;
	min-width:120px;
	margin:4px 10px 0px 170px;
	
	border:2px solid black;
	z-index:3;
	color:silver;
}

.content_photogray h2
{
	color:lightgrey;
	padding-left:10px;
	padding-top:10px;
	margin-bottom:0;
}

.content_photogray h3
{
	margin-top:0;
	padding-left:10px;
	font-weight:normal;
	color:silver;
}

.content_photogray .searchresults a
{
	color:silver;
}

.content_photogray .searchresults a:visited
{
	color:#999999;
}

.content_photogray .interestBox {
	background-color:#cccccc;
	color:#444444;
}

.content_photowhite
{
	background:white;
	position:relative;
	width:auto;
	min-width:120px;
	margin:4px 10px 0px 170px;
	
	border:2px solid black;
	z-index:3;
	color:black;
}

.content_photowhite h2
{
	color:black;
	padding-left:10px;
	padding-top:10px;
	margin-bottom:0;
}

.content_photowhite h3
{
	margin-top:0;
	padding-left:10px;
	font-weight:normal;
	color:silver;

}



/* All the content boxes belong to the content class. */
.content3 {
	position:relative;
	width:auto;
	min-width:120px;
	margin:4px 210px 0px 170px;
	border:2px solid black;
	background-color:white;
	padding:10px;
	z-index:3;
	}

.content2 {
	position:relative;
	width:auto;
	min-width:120px;
	margin:4px 10px 0px 170px;
	border:2px solid black;
	background-color:white;
	padding:10px;
	z-index:3;
	}

.content1 {
	position:relative;
	width:auto;
	min-width:120px;
	margin:4px 10px 0px 10px;
	border:2px solid black;
	background-color:white;
	padding:10px;
	z-index:3;
	}
	
/* main content interior */
#maincontent
{

}

#maincontent h2
{
	margin-top:0px;
}

/* form styles */
#maincontent form label
{
	font-size:0.8em;
}

span.formerror
{
	font-size:0.8em;
	color:red;
}

div.copyright
{
	font-size:0.7em; 
	color: silver;
	text-align:center;
	font-style:italic;
}

p.wordnet a
{
	white-space:nowrap;
	text-decoration: none;
}

p.wordnet a:hover
{
	text-decoration: underline;
}

div.caption
{
	clear:left;
	font-size:0.8em;
}
div.statuscaption
{
	clear:left;
	font-size:0.7em;
	color:silver;
}

dl.browselist
{
	
}

dl.browselist dt
{
	font-weight:bold;
	border-bottom:1px solid #dddddd;
}

dl.browselist dd
{
	margin-left:5px;
	padding-bottom:15px;
}

div.rastermap {
  border: 1px solid #a9a9a9;
  padding: 4px;
  float:left;
  z-index:5;
  padding:10px;

}

div.ccmessage
{
	width:inherit;
	text-align:center;
	padding:3px;
	font-size:0.9em;
}

div.ccmessage img
{
	vertical-align: middle
}

/* styling for a full size portrait photo*/
div.photoportrait
{
	width:inherit;
	padding:10px;
	text-align:center;
	margin:10px;
}

/* styling for a full size landscape photo*/
div.photolandscape
{
	width:inherit;
	padding:10px;
	text-align:center;
	margin:10px;
}

.img-shadow img {
	/*
	width:100%;
	height:100%;
	max-width:640px;
	max-height:640px;
	*/
  	border: 1px solid #a9a9a9;
  	padding: 4px;
  }


/* styling for a 66% resized photo*/
div.photo66
{
	width:442px;
	padding:10px;
	border: silver 1px solid;
	text-align:center;
	margin:10px;
}



/* styling for a 33% resized photo*/
div.photo33
{
	width:230px;
	padding:10px;
	border: silver 1px solid;
	text-align:center;
	margin:10px;
	position:relative;
}

/* styling for a guide photo*/
div.photoguide
{
	width:650px;
	padding:10px;
	border: silver 1px solid;
	text-align:center;
	margin:10px;
	position:relative;
}


/*---------------------------------------------------------------*
 * inline sidebar
 *---------------------------------------------------------------*/

div.contentsidebar_block
{
	float:right;
	width:20em;
	background:#ddffdd;
	padding:0.5em;
}

div.contentsidebar ul
{
	margin:0;
	padding:0 0 0 1em;
}

div.contentsidebar li
{
	font-size:0.8em;
}

div.contentsidebar h3
{
	margin-top:0;
}

/*---------------------------------------------------------------*
 * report table
 *---------------------------------------------------------------*/

table.report thead tr
{
	background:black;
}
table.report thead tr td
{
	color:white;
	padding:0.2em;
	font-weight:bold;
}

table.report thead tr td a
{
	color:white;
}

table.report tbody tr td
{
	padding-left:0.2em;
	padding-right:0.2em;
}

table.report tbody tr.totalrow
{
	background: silver;
}

table.report tbody tr.totalrow th
{
	border-top: 1px solid black;
}

/*---------------------------------------------------------------*
 * form table
 *---------------------------------------------------------------*/

table.formtable td
{
	vertical-align:top;
}



table.formtable div.fieldnotes
{
	font-size:0.8em;
	color:#777799;
}

/*---------------------------------------------------------------*
 * picture info
 *---------------------------------------------------------------*/

div.picinfo
{
	font-size:0.8em;
	padding:5px;
}

div.picinfo td
{
	vertical-align:top;
}

dl.picinfo
{
	padding-left:15px;
}

dl.picinfo dt
{
	font-weight:bold;
	border-bottom:1px solid #dddddd;
}

dl.picinfo dd
{
	margin-left:25px;
	padding-bottom:10px;
}
/* ... */

